<resources>
    <string name="app_name">Bookshop Jimeno</string>
    <string name="title_book_detail">Book Details</string>
    <string name="titulo">Título</string>
    <string name="autor">Autor</string>
    <string name="Fecha">Fecha Publicación</string>
    <string name="Descripcion">Descripción</string>
    <string name="Clave">ID.LIBRO</string>
    <string name="title_activity_login">Iniciar Sesión</string>
    <!--
    <string name="facebook_app_id">483561662152348</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb483561662152348</string>

-->
    <string name="facebook_app_id">483561662152348</string>
    <string name="fb_login_protocol_scheme">fb483561662152348</string>

    <!-- notifications -->
    <string name="default_notification_channel_id">channel_id</string>
    <string name="channel_name">MyChannel</string>
    <string name="channel_description">Antes de que pueda entregar la notificación en Android 8.0 y superior, se debe registrar el canal de notificación </string>
    <string name="delete_book">Borrar Libro</string>
    <string name="show_bookdetail">Mostrar detalle Libro</string>
    <string name="error_book">No Existe el libro con ese ID:</string>

    <string name="bigtext">Que desea hacer con el libro con el ID:</string>

    <!-- Pantalla Inicio-->
    <string name="title_activity_presentation">Bookshop Jimeno</string>
    <string name="dummy_button">Entrar</string>
    <string name="dummy_content">Bookshop \n
        Jimeno</string>
    <string name="libro_semana">Libro de la semana</string>


    <!-- Pantalla Login
  -->

    <string name="hintEmail">E-mail</string>
    <string name="hintPassword">Contraseña</string>
    <string name="botonIniciarSesion">Iniciar sesión</string>
    <string name="botonRegistrar">Registrarse</string>
    <string name="labelActualizarPassword">¿Has olvidado la contraseña?</string>
    <string name="botonIniciarSesionFace">Iniciar sesión con Facebook</string>
    <string name="botonIniciarSesionGoogle">Iniciar sesión con Google</string>
    <string name="barraDivisora">O</string>
    <string name="ErrorEmail">No es un correo Válido</string>
    <string name="ErrorPassw">La contraseña debe tener más de 6 caracteres</string>
    <string name="ErrorEmail2">Se debe ingresar un email</string>
    <string name="ErrorPassw2">Falta ingresar la contraseña</string>
    <string name="ErrorInicioSesion">Contraseña/email incorrectos o error de Servidor</string>
    <string name="ErrorRegistro">La cuenta ya existe</string>
    <string name="ErrorSesion">No se pudo iniciar sesión</string>
    <string name="TextoBotonFace">Iniciar Sesión con Facebook</string>
    <string name="TextoBotonGoogle">Iniciar Sesión con Google</string>
    <string name="RestablecerContrasenyaTitulo">Restablecer Contraseña</string>
    <string name="RestablecerContrasenyaMensaje">Escribe tu email y te mandamos un enlace para restablecer la contraseña,gracias</string>
    <string name="ErrorOnCancelFace">Facebook canceló la operación</string>
    <string name="ErrorOnErrorFace">Ocurrió un error al ingresar a Facebook</string>
    <string name="ErrorCredencialesFace">Ocurrió un error al ingresar a Firebase</string>
    <string name="ConfirmarDialog">Confirmar</string>
    <string name="CancelarDialog">Cancelar</string>
    <string name="ProgresDialogLogin">Realizando proceso de autentificación...</string>
    <string name="ProgresDialogRegistro">Realizando proceso de Registro de Usuario...</string>
    <string name="ProgresDialogConfirmacionEnvio">Correo Enviado a: </string>
    <string name="ProgresDialogCancelacionEnvio">Fallo al enviar el correo:</string>

    <!-- Navigation drawer-->
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_closeSesion">Cerrar Sesión</string>
    <string name="action_pregunta_closeSesion">Seguro que desea cerrar la sesión?</string>
    <string name="listar_libros">Listar Libros desde Firebase</string>

    <string name="listar_libros_bd">Listar Libros Localmente</string>
    <string name="enviar_informacion">Enviar detalles a otra App.</string>
    <string name="copiar_portapapeles">Copiar Texto al Portapapeles</string>
    <string name="compartir_whatsapp">Compartir con WhastApp</string>

    <string name="texto_descriptivo">Aplicación Android sobre libros</string>
    <string name="label_texto">EtiquetaTexto</string>
    <string name="alerta">Copiado correctamente al portapapeles el siguiente texto:</string>
    <string name="error_whatsapp">Whatsapp no está instalado</string>
    <string name="error_portapapeles">Ocurrió un error al copiar texto al portapapeles</string>
    <string name="error_almacenamiento">En Android 6.0+, el usuario debe otorgar el permiso de almacenamiento a la aplicación</string>
    <string name="SI">SI</string>
    <string name="NO">NO</string>

    <string name="detalles_app">Compartir info. y icono de la App</string>

    <!-- Fragment firebase-->

    <string name="Error_Servidor">Error en el servidor,se están cargando los datos desde tu base de datos local</string>
    <string name="Error_Red">Sin conexión a internet,se cargaran los datos desde tu base de datos local,pulse listar Servidor cuando restablezca conexión</string>

    <!-- main activity-->
    <string name="Foto_Actualizada">La foto ha sido actualizada correctamente</string>

    <string name="Foto_Error">No se ha podido subir la foto correctamente</string>

    <!--fragment detalle -->

     <string name="FotoCaption">FotoLibro</string>
    <string name="compra_correcta">Compra realizada correctamente</string>
    <string name="compra_faltandatos">No se pudo realizar la compra rellene todos los campos</string>

</resources>



