<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    app:layout_constraintGuide_percent="0.45"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textViewTituloCabecera3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/autor"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageViewFotoLibro"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewFotoLibro"
        android:layout_width="152dp"
        android:layout_height="246dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/berkshire_swash"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewFotoLibro"
        app:layout_constraintTop_toBottomOf="@+id/textViewTituloCabecera3" />

    <TextView
        android:id="@+id/textViewFechaPublicacionCabecera"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:text="@string/Fecha"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageViewFotoLibro"
        app:layout_constraintTop_toBottomOf="@+id/textViewAutor" />

    <TextView
        android:id="@+id/textViewFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/berkshire_swash"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@+id/imageViewFotoLibro"
        app:layout_constraintTop_toBottomOf="@+id/textViewFechaPublicacionCabecera" />

    <TextView
        android:id="@+id/textViewDescripcionCabecera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/Descripcion"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageViewFotoLibro"
        app:layout_constraintTop_toBottomOf="@+id/textViewFecha" />

    <TextView
        android:id="@+id/textViewDescripcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/berkshire_swash"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewFotoLibro" />

</android.support.constraint.ConstraintLayout>